<resources>
    <string name="app_name">Delist</string>
    <string name="name_input_hint">Name</string>
    <string name="new_collection_button_description">New collection button</string>
    <string name="create_collection">Create collection</string>
    <string name="edit_collection">Edit collection</string>
    <string name="type_queue">Oldest task first</string>
    <string name="type_stack">Newest task first</string>
    <string name="type_randomizer">Random</string>
    <string name="empty_collection_message">No tasks</string>
    <string name="bulleted_list_item">\u2022 %s</string>
    <string name="undo">Undo</string>
    <string name="complete_task_message">Task completed</string>
    <string name="collection_color_button_description">Choose collection color</string>
    <string name="about">About</string>
    <string name="import_database">Import backup</string>
    <string name="export_database">Export backup</string>
    <string name="dialog_negative_button_label">Cancel</string>
    <string name="delete_collection_dialog_title">Delete collection?</string>
    <string name="message_action_cannot_be_undone">This action cannot be undone.</string>
    <string name="delete">Delete</string>
    <string name="delete_completed_dialog_title">Delete completed tasks?</string>
    <string name="collection_type_selector_header_title">Task order</string>
    <string name="sort">Sort</string>
    <string name="no_collection_message">Tap \'+\' to create a collection</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system">System</string>

    <string-array name="theme_string_array">
        <item>@string/light</item>
        <item>@string/dark</item>
        <item>@string/system</item>
    </string-array>
    <string name="import_db_error_message">File not recognized</string>
    <string name="import_db_success_message">Import successful</string>
    <string name="sort_and_filter"><![CDATA[Sort & filter]]></string>
    <string name="hide_archived">Hide archived</string>
    <string name="sort_a_to_z">A to Z</string>
    <string name="sort_z_to_a">Z to A</string>
    <string name="sort_manually">Manually</string>
    <string name="backup_and_restore">Backup &amp; Restore</string>
    <string name="export_sharesheet_title">Share with</string>
    <string name="rearrange_hint">Tip: press and hold, then drag a collection to rearrange.</string>
    <string name="ok">OK</string>
    <string name="completed_deleted_message">Completed tasks deleted</string>
    <string name="collection_archived_message">Collection archived</string>
    <string name="collection_unarchived_message">Collection unarchived</string>
    <string name="collection_deleted_message">Collection deleted</string>
    <string name="archived">Archived</string>
    <string name="export_zip">Export as text</string>
    <string name="tasks_added_message">Tasks added to collection</string>
    <string name="task_input_hint">New tasks</string>
    <string name="task_input_dialog_title">Add tasks</string>
    <string name="add">Add</string>
    <string name="export_database_description">Export a file containing all of your data. This file can be imported back.</string>
    <string name="import_database_description">Import a previously generated backup file.</string>
    <string name="export_zip_description">Export all of your data in plain text files for use in other apps. This file cannot be imported back.</string>
    <string name="color_button_description">Color option button</string>
    <string name="edit">Edit</string>
    <string name="export">Export</string>
    <string name="archive">Archive</string>
    <string name="unarchive">Unarchive</string>
    <string name="delete_collection">Delete collection</string>
    <string name="delete_completed">Delete completed</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="add_tasks">Add tasks</string>
    <string name="completed_tasks">Completed tasks</string>
    <string name="incomplete_tasks">Incomplete tasks</string>
    <string name="hide_show_tasks">Hide/show tasks</string>

</resources>