<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/edit"
        android:contentDescription="@string/edit"
        android:icon="@drawable/ic_baseline_edit_24"
        android:title="@string/edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/export"
        android:contentDescription="@string/export"
        android:title="@string/export"
        app:showAsAction="never" />

    <item
        android:id="@+id/archive"
        android:contentDescription="@string/archive"
        android:title="@string/archive"
        app:showAsAction="never" />

    <item
        android:id="@+id/unarchive"
        android:contentDescription="@string/unarchive"
        android:title="@string/unarchive"
        app:showAsAction="never" />

    <item
        android:id="@+id/delete_collection"
        android:contentDescription="@string/delete_collection"
        android:title="@string/delete_collection"
        app:showAsAction="never" />

    <item
        android:id="@+id/delete_completed"
        android:contentDescription="@string/delete_completed"
        android:title="@string/delete_completed"
        app:showAsAction="never" />

</menu>

