<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/about"
        android:checkable="false"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/about" />

    <item
        android:id="@+id/theme"
        android:checkable="false"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/theme" />

    <item
        android:id="@+id/import_data"
        android:checkable="false"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/import_database" />

    <item
        android:id="@+id/export_data"
        android:checkable="false"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/export_database" />

</menu>